# InboxAgent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
src/inboxagent/: config.py  database.py  main.py
src/inboxagent/ai/: agent.py  summarizer.py
src/inboxagent/auth/: google.py  http_server.py  microsoft.py  token_store.py
src/inboxagent/bot/: handlers.py  keyboards.py  messages.py
src/inboxagent/digest/: builder.py  formatter.py
src/inboxagent/providers/: base.py  gmail.py  google_calendar.py  outlook.py  teams_calendar.py
src/inboxagent/scheduler/: jobs.py
tests/: conftest.py
tests/test_ai/: test_summarizer.py
tests/test_digest/: test_builder.py  test_formatter.py  test_messages.py
tests/test_providers/: test_base.py
